log/build_2025-05-04_18-57-30/qbo_driver/stdout_stderr.log
running egg_info
writing ../build/qbo_driver/qbo_driver.egg-info/PKG-INFO
writing dependency_links to ../build/qbo_driver/qbo_driver.egg-info/dependency_links.txt
writing entry points to ../build/qbo_driver/qbo_driver.egg-info/entry_points.txt
writing requirements to ../build/qbo_driver/qbo_driver.egg-info/requires.txt
writing top-level names to ../build/qbo_driver/qbo_driver.egg-info/top_level.txt
reading manifest file '../build/qbo_driver/qbo_driver.egg-info/SOURCES.txt'
writing manifest file '../build/qbo_driver/qbo_driver.egg-info/SOURCES.txt'
running build
running build_py
copying qbo_driver/listen.py -> /home/qbo-v2/qbo_ws/src/build/qbo_driver/build/lib/qbo_driver
copying qbo_driver/__init__.py -> /home/qbo-v2/qbo_ws/src/build/qbo_driver/build/lib/qbo_driver
copying qbo_driver/listen_old.py -> /home/qbo-v2/qbo_ws/src/build/qbo_driver/build/lib/qbo_driver
copying qbo_driver/diag_node.py -> /home/qbo-v2/qbo_ws/src/build/qbo_driver/build/lib/qbo_driver
copying qbo_driver/hardware_info.py -> /home/qbo-v2/qbo_ws/src/build/qbo_driver/build/lib/qbo_driver
running install
running install_lib
copying /home/qbo-v2/qbo_ws/src/build/qbo_driver/build/lib/qbo_driver/listen.py -> /home/qbo-v2/qbo_ws/src/install/qbo_driver/lib/python3.10/site-packages/qbo_driver
byte-compiling /home/qbo-v2/qbo_ws/src/install/qbo_driver/lib/python3.10/site-packages/qbo_driver/listen.py to listen.cpython-310.pyc
  File "/home/qbo-v2/qbo_ws/src/install/qbo_driver/lib/python3.10/site-packages/qbo_driver/listen.py", line 112
    self.get_logger()info(
                     ^^^^
SyntaxError: invalid syntax

running install_data
copying resource/qbo_driver -> /home/qbo-v2/qbo_ws/src/install/qbo_driver/share/ament_index/resource_index/packages
copying package.xml -> /home/qbo-v2/qbo_ws/src/install/qbo_driver/share/qbo_driver
copying launch/diag_launch.py -> /home/qbo-v2/qbo_ws/src/install/qbo_driver/share/qbo_driver/launch
copying qbo_driver/thresholds.yaml -> /home/qbo-v2/qbo_ws/src/install/qbo_driver/share/qbo_driver
copying qbo_driver/diagnostic_aggregator.yaml -> /home/qbo-v2/qbo_ws/src/install/qbo_driver/share/qbo_driver
running install_egg_info
removing '/home/qbo-v2/qbo_ws/src/install/qbo_driver/lib/python3.10/site-packages/qbo_driver-0.1.1-py3.10.egg-info' (and everything under it)
Copying ../build/qbo_driver/qbo_driver.egg-info to /home/qbo-v2/qbo_ws/src/install/qbo_driver/lib/python3.10/site-packages/qbo_driver-0.1.1-py3.10.egg-info
running install_scripts
Installing diag_node script to /home/qbo-v2/qbo_ws/src/install/qbo_driver/lib/qbo_driver
Installing qbo_listen script to /home/qbo-v2/qbo_ws/src/install/qbo_driver/lib/qbo_driver
writing list of installed files to '/home/qbo-v2/qbo_ws/src/build/qbo_driver/install.log'
